# Doc2RAG

./: .gitignore  README.md
script/: concurrency_warm_up.py  (+6 more)
teco-rag/: README.md  build.sh  pyproject.toml  requirements.txt  setup.py  start.py  start_server.sh  start_web_ui.sh
teco-rag/APP-META/: Dockerfile
teco-rag/conf/: config.yaml
teco-rag/docs/: competition_guide.md  configuration.md  deployment.md  development.md  evaluation.md  observability.md  openatom_competition_guide.md  pull-requests.md  service.md
teco-rag/exampls/graphs/: import_data.py
teco-rag/notebook/: readme.md
teco-rag/rag/chains/: __init__.py  base.py  generate.py  indexing.py  retrieval.py
teco-rag/rag/common/: configuration.py  configuration_wizard.py
teco-rag/rag/connector/: base.py  utils.py
teco-rag/rag/connector/database/: utils.py
teco-rag/rag/connector/database/models/: knowledge_file_model.py
teco-rag/rag/connector/database/repository/: knowledge_base_repository.py  knowledge_file_repository.py
teco-rag/rag/connector/embedding/: local_embedding.py
teco-rag/rag/connector/llm/: teco_llm.py
teco-rag/rag/connector/vectorstore/: base.py  chroma.py  milvus.py
teco-rag/rag/module/: utils.py
teco-rag/rag/module/indexing/: multi_vector.py  utils.py
teco-rag/rag/module/indexing/loader/: __init__.py  doc_loader.py  pdf_loader.py  plumber_pdf_loader.py  pptx_loader.py  smart_pdf_loader.py
teco-rag/rag/module/pre_generate/: summery_content.py
teco-rag/rag/module/pre_retrieval/: hyde_qyery.py  multi_query.py
teco-rag/server/: api.py  chat.py  knowledge.py  main.py  rag_test.py  trace.py  utils.py  web_app.py
teco-rag/tools/evaluate/: format_evaluate_data.py  run_ragas_evaluate.py
teco-rag/tools/observability/langfuse/: tracing.py
teco-rag/tools/observability/langsmith/: tracing.py
(+9 files in other folders)
